# agent-search-service

./: .env.example  .gitignore  AGENTS.md  langgraph.json  main.py  pyproject.toml
docs/: ProblemRuntimeInject.md  api-endpoints.md  architecture.md  search_tool.md
src/: container.py  graph_builder.py  main.py  worker_main.py
src/agent/: SKILL.md  graph.py
src/agent/nodes/: agent.py  chat.py  human_approval.py  supervisor.py
src/agent/subagents/: __init__.py  base.py  compliance_checker.py  document_researcher.py  financial_analyzer.py
src/agent/tools/: search_tool.py
src/api/: schemas.py  server.py
src/core/: config.py  log.py
src/models/: agent.py  forwarded_props.py  search.py
src/queue/: __init__.py  inprocess.py  protocol.py  redis.py
src/ratelimit/: __init__.py  memory.py  protocol.py  redis_impl.py
src/services/: llm_service.py  search_service.py
src/worker/: agent_worker.py
tests/: conftest.py  test_api.py  test_queue.py  test_ratelimit.py  test_redis_queue.py
