[project]
name = "lm-agent-service"
version = "0.1.0"
description = "LLM Agent Service using LangGraph + AG-UI protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-langgraph[fastapi]>=0.0.35",
    "langgraph>=0.3.25,<2",
    "langgraph-checkpoint-postgres",
    "langchain-openai",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.29.0",
    "gunicorn>=22.0.0; sys_platform != 'win32'",
    "structlog>=25.1.0",
    "dependency-injector>=4.49.0",
    "deepagents>=0.6.1",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-nvidia-ai-endpoints>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/**"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
]
